# axvirtio-devices

./: ADDRESS_TRANSLATION_SOLUTION.md  Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
axvirtio-blk/: Cargo.toml  README.md
axvirtio-blk/src/: backend.rs  devops_impl.rs  lib.rs
axvirtio-blk/src/backend/: file.rs  memory.rs  mod.rs  nvme.rs  virtio.rs
axvirtio-blk/src/block/: config.rs  mod.rs  request.rs
axvirtio-blk/src/constants/: block.rs  mod.rs
axvirtio-blk/src/mmio/: device.rs  mod.rs  tests.rs
axvirtio-blk/tests/: block_tests.rs
axvirtio-common/: Cargo.toml
axvirtio-common/src/: config.rs  device_type.rs  error.rs  lib.rs  memory.rs
axvirtio-common/src/constants/: mmio.rs  mod.rs  queue.rs  virtio.rs
axvirtio-common/src/mmio/: mod.rs  transport.rs
axvirtio-common/src/queue/: available.rs  descriptor.rs  mod.rs  used.rs
axvirtio-console/: Cargo.toml
axvirtio-console/examples/: host_input_example.rs
axvirtio-console/src/: backend.rs  device.rs  devops_impl.rs  lib.rs
axvirtio-console/src/backend/: file.rs  mod.rs  pl011.rs  socket.rs  stdio.rs  traits.rs
axvirtio-console/src/console/: config.rs  mod.rs
axvirtio-console/src/constants/: console.rs  mod.rs
axvirtio-console/src/mmio/: device.rs  mod.rs
axvirtio-console/tests/: console_tests.rs  integration_test.rs
axvirtio-net/: Cargo.toml
axvirtio-net/src/: device.rs  lib.rs  packet.rs
axvirtio-net/src/backend/: memory.rs  mod.rs  tap.rs  traits.rs
axvirtio-net/src/constants/: mod.rs  net.rs
axvirtio-net/src/net/: config.rs  mod.rs
axvirtio_blk/: all.html  enum.VirtioError.html  index.html  sidebar-items.js  struct.VirtioBlockConfig.html  struct.VirtioConfig.html  struct.VirtioMmioBlockDevice.html  struct.VirtioQueue.html  trait.BlockBackend.html  type.VirtioResult.html
axvirtio_blk/backend/: trait.BlockBackend.html
axvirtio_blk/block/config/: struct.VirtioBlockConfig.html
axvirtio_blk/mmio/device/: struct.VirtioMmioBlockDevice.html
axvirtio_common/: all.html  enum.VirtioDeviceID.html  index.html  sidebar-items.js
axvirtio_common/config/: index.html  sidebar-items.js  struct.VirtioConfig.html
axvirtio_common/constants/: index.html  sidebar-items.js
axvirtio_common/constants/mmio/: constant.MMIO_MAGIC_VALUE.html  constant.MMIO_VERSION.html  constant.VIRTIO_MMIO_CONFIG_GENERATION.html  constant.VIRTIO_MMIO_CONFIG_OFFSET.html  constant.VIRTIO_MMIO_DEVICE_FEATURES.html  constant.VIRTIO_MMIO_DEVICE_FEATURES_SEL.html  constant.VIRTIO_MMIO_DEVICE_ID.html  constant.VIRTIO_MMIO_DRIVER_FEATURES.html  constant.VIRTIO_MMIO_DRIVER_FEATURES_SEL.html  constant.VIRTIO_MMIO_INTERRUPT_ACK.html  constant.VIRTIO_MMIO_INTERRUPT_STATUS.html  constant.VIRTIO_MMIO_MAGIC_VALUE.html  constant.VIRTIO_MMIO_QUEUE_AVAIL_HIGH.html  constant.VIRTIO_MMIO_QUEUE_AVAIL_LOW.html  constant.VIRTIO_MMIO_QUEUE_DESC_HIGH.html  constant.VIRTIO_MMIO_QUEUE_DESC_LOW.html  constant.VIRTIO_MMIO_QUEUE_NOTIFY.html  constant.VIRTIO_MMIO_QUEUE_NUM.html  constant.VIRTIO_MMIO_QUEUE_NUM_MAX.html  constant.VIRTIO_MMIO_QUEUE_READY.html  constant.VIRTIO_MMIO_QUEUE_SEL.html  constant.VIRTIO_MMIO_QUEUE_USED_HIGH.html  constant.VIRTIO_MMIO_QUEUE_USED_LOW.html  constant.VIRTIO_MMIO_STATUS.html  constant.VIRTIO_MMIO_VENDOR_ID.html  constant.VIRTIO_MMIO_VERSION.html  index.html  sidebar-items.js
axvirtio_common/constants/queue/: constant.DEFAULT_QUEUE_SIZE.html  constant.MAX_DESCRIPTOR_CHAIN_LENGTH.html  constant.MAX_QUEUE_SIZE.html  constant.MIN_DESCRIPTOR_CHAIN_LENGTH.html  constant.MIN_QUEUE_SIZE.html  constant.VIRTQ_AVAIL_ALIGN.html  constant.VIRTQ_AVAIL_HEADER_SIZE.html  constant.VIRTQ_DESC_ALIGN.html  constant.VIRTQ_DESC_SIZE.html  constant.VIRTQ_USED_ALIGN.html  constant.VIRTQ_USED_ELEM_SIZE.html  constant.VIRTQ_USED_HEADER_SIZE.html  index.html  sidebar-items.js
axvirtio_common/constants/virtio/: constant.VIRTIO_F_INDIRECT_DESC.html  constant.VIRTIO_F_RING_EVENT_IDX.html  constant.VIRTIO_F_RING_RESET.html  constant.VIRTIO_F_VERSION_1.html  constant.VIRTIO_MAX_DEVICES.html  constant.VIRTIO_MMIO_BASE.html  constant.VIRTIO_MMIO_DEVICE_SIZE.html  constant.VIRTIO_MMIO_INT_CONFIG.html  constant.VIRTIO_MMIO_INT_VRING.html  constant.VIRTIO_MMIO_TOTAL_SIZE.html  constant.VIRTIO_STATUS_ACKNOWLEDGE.html  constant.VIRTIO_STATUS_DEVICE_NEEDS_RESET.html  constant.VIRTIO_STATUS_DRIVER.html  constant.VIRTIO_STATUS_DRIVER_OK.html  index.html  (+9 more)
axvirtio_common/device_type/: enum.VirtioDeviceID.html
axvirtio_common/error/: enum.VirtioError.html  index.html  sidebar-items.js  type.VirtioResult.html
axvirtio_common/mmio/: index.html
axvirtio_common/queue/: index.html  sidebar-items.js  struct.AvailableRing.html  struct.DescriptorTable.html  struct.UsedRing.html  struct.VirtQueueAvail.html  struct.VirtQueueDesc.html  struct.VirtQueueUsed.html  struct.VirtioQueue.html  struct.VirtqUsedElem.html
search.index/: 0104356caa8a.js  04a6b140de24.js  083c9e9503ec.js  09157c0a2c4c.js  0fcc2ba0ed74.js  10ec0e485953.js  120296286edb.js  170629b0e65f.js  173f24563502.js  17947570d046.js  1b7ac11ab31d.js  1c4af867b097.js  1e288d3809ba.js  1eaa9c0c2e29.js  1f8b362895cf.js  1fa4d3ead34b.js  1fa67cfe5f22.js  2094c9b472ad.js  21cb3ba80aaf.js  21ed6583dcc2.js  2454fad45c45.js  2566181c9b17.js  2567ed275a95.js  26eca99b7464.js  27377c1dd71c.js  286ff2f8c8ed.js  2f152e791584.js  2f618dfdeeb5.js  318a0c4c8449.js  334bbfe51e2a.js  3498429d0e56.js  35f5b86057d9.js  35fc28a17fad.js  375bd2c0b71f.js  3a3387e39e1d.js  3b282d73731f.js  3c8f39d993e3.js  3f64be20b15b.js  4049385c35dd.js  42144e13acec.js  (+25 more)
search.index/crateNames/: d22c1131eb88.js
search.index/desc/: 239e0d8344f0.js
search.index/entry/: c3a08871fe0f.js
search.index/function/: 3ea83398794e.js
search.index/generic_inverted_index/: 685e86ea50ee.js
search.index/name/: 37d6a34c0368.js
search.index/normalizedName/: e088208188c1.js
search.index/path/: 22aa7ccc1f0c.js
search.index/type/: bea0fd05aa8e.js
src/axvirtio_blk/: backend.rs.html  lib.rs.html
src/axvirtio_common/: config.rs.html  device_type.rs.html  error.rs.html  lib.rs.html
(+51 files in other folders)
