[workspace]
resolver = "2"

members = [
    "axvirtio-common",
    "axvirtio-blk",
]

[workspace.package]
version = "0.1.0"
authors = ["Debin <luodeb@outlook.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-hypervisor/axvisor"
repository = "https://github.com/arceos-hypervisor/axvirtio"

[workspace.dependencies]
axvirtio-common = { path = "axvirtio-common" }
axvirtio-blk = { path = "axvirtio-blk" }

axaddrspace = "0.1.2"
