[workspace]
resolver = "2"

members = [
    "axvirtio-common",
    "axvirtio-blk",
    "axvirtio-console",
]

[workspace.package]
version = "0.1.0"
authors = ["Debin <luodeb@outlook.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-hypervisor/axvisor"
repository = "https://github.com/arceos-hypervisor/axvirtio"
edition = "2024"

[workspace.dependencies]
axvirtio-common = { version ="0.1.0", path = "axvirtio-common" }
axvirtio-blk = { version ="0.1.0", path = "axvirtio-blk" }
axvirtio-console = { version ="0.1.0", path = "axvirtio-console" }

axaddrspace = "0.2.0"
