[package]
name = "axvirtio-blk"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition = "2021"

[features]
default = []

[dependencies]
axvirtio-common = { workspace = true }
axaddrspace = { workspace = true }
memory_addr = "0.4.0"
spin = "0.9"
log = "0.4"