[package]
name = "axvirtio-common"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axaddrspace = { workspace = true }
memory_addr = "0.4.0"
spin = "0.10.0"
log = "0.4"

[features]
default = []
