[package]
name = "axvirtio-console"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
axvirtio-common = { workspace = true }
axaddrspace = { workspace = true }
axerrno = "0.1.0"
memory_addr = "0.3"
spin = "0.9"
log = "0.4"
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git" }

[features]
default = ["stdio-backend"]
stdio-backend = []
socket-backend = []
file-backend = []
